syntax = "proto3";

package confa.server.v1;

option go_package = "/serverv1";

// import "google/protobuf/timestamp.proto";
import "confa/user/v1/user.proto";
import "confa/channel/v1/channels.proto";

service ServerService {
  rpc ListChannels(ListChannelsRequest) returns (ListChannelsResponse) {}
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
  rpc CreateChannel(CreateChannelRequest) returns (CreateChannelResponse) {}
}

message ListChannelsRequest { string server_id = 1; }
message ListChannelsResponse { repeated confa.channel.v1.Channel channels = 1; }

message ListUsersRequest { string server_id = 1; }
message ListUsersResponse { repeated confa.user.v1.User users = 1; }

message CreateChannelRequest {
  string server_id = 1;
  string name = 2;
  enum ChannelType {
    TEXT = 0;
    VOICE = 1;
  }
  ChannelType type = 3;
}

message CreateChannelResponse { confa.channel.v1.Channel channel = 1; }